<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pengaturan_tampilan">
        <ListPreference
            android:key="theme_preference"
            android:title="@string/pref_theme"
            android:summary="@string/pref_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            android:icon="@android:drawable/ic_menu_preferences" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pengaturan_backup">
        <Preference
            android:key="backup_local"
            android:title="@string/backup_lokal"
            android:summary="@string/backup_lokal_summary"
            android:icon="@drawable/ic_store" />
        <Preference
            android:key="restore_drive"
            android:title="@string/restore_dari_file"
            android:summary="@string/restore_dari_file_summary"
            android:icon="@android:drawable/ic_menu_revert" />
    </PreferenceCategory>
</PreferenceScreen>
